Refactor Base64 code to try two different base64 encoders in Sun Java 6, via reflection to avoid compile time warnings.